@@ -1,5 +1,9 @@
 2002-11-16  James Henstridge  <james@daa.com.au>
 
+	* pygobject.c (pygobject_connect_object): set up closure
+	correctly.  Fix from bug #96922.
+	(pygobject_connect_object_after): and here.
+
 	* gtk/gtk.override (_wrap_gtk_text_view_buffer_to_window_coords):
 	(_wrap_gtk_text_view_window_to_buffer_coords): wrap functions.
 
